# sfc-virtual-device-plugin

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  download_deps.sh  gazelle_config.yaml  go.mod  go.sum  go_deps.bzl  grpc.bzl  linux_kernel_comp.sh
bazel/: linux_headers.BUILD  openonload.BUILD
cmd/code-generation/: BUILD.bazel  kubeconfig.go
cni/: BUILD.bazel  solarflare_macvlan.go
contrib/: onload
contrib/onload-7.1.2.141/: ChangeLog  LICENSE  README  README.ef_vi  ReleaseNotes  ReleaseNotes-sfc
contrib/onload-7.1.2.141/mk/: linux_gcc.mk
contrib/onload-7.1.2.141/prebuilt/: prebuilt_config_i686  prebuilt_config_x86_64
contrib/onload-7.1.2.141/prebuilt/gnu_x86_64/lib/zf/: libonload_zf.so.1.1.1
contrib/onload-7.1.2.141/prebuilt/gnu_x86_64/tools/cplane/: onload_cp_server
contrib/onload-7.1.2.141/prebuilt/gnu_x86_64/tools/onload_mibdump/: onload_mibdump
contrib/onload-7.1.2.141/prebuilt/gnu_x86_64/tools/zf/: zf_stackdump
contrib/onload-7.1.2.141/scripts/: mmakebuildtree  mmaketool  onload_install
contrib/onload-7.1.2.141/scripts/onload_misc/: onload-extract-notes  onload-make-official-srpm  openonload.spec
contrib/onload-7.1.2.141/src/driver/linux_affinity/: kernel_compat.h  kernel_compat.sh  sfcaffinity.c
contrib/onload-7.1.2.141/src/driver/linux_char/: char_driver.c  efch_manager.c  efch_memreg.c  efch_pd.c  linux_char_internal.h  mmap.c  vi_resource.c  vi_resource_mmap.c  vi_set.c
contrib/onload-7.1.2.141/src/driver/linux_net/: ef10.c  efx.c  enum.h  ethtool.c  farch.c  ioctl.c  kernel_compat.h  kernel_compat.sh  kernel_compat_funcs.sh  mcdi_mon.c  mcdi_pcol.h  mcdi_port.c  mtd.c  net_driver.h  nic.h  ptp.c  rx.c  selftest.c
contrib/onload-7.1.2.141/src/driver/linux_onload/: aarch64_linux_trampoline.c  cplane.c  cplane_prot.c  driver.c  dshm.c  linux_stats.c  mmake.mk  mmap.c  onload_kernel_compat.h  onloadfs.c  ossock_calls.c  x86_linux_trampoline.c
contrib/onload-7.1.2.141/src/driver/linux_resource/: driverlink_new.c  filter.c  kernel_compat.h  mmake.mk  resource_driver.c  syscall_x86.c
contrib/onload-7.1.2.141/src/include/ci/: app.h
contrib/onload-7.1.2.141/src/include/ci/app/: checkedsocket.h  net.h  socket.h  utils.h
contrib/onload-7.1.2.141/src/include/ci/compat/: gcc.h  gcc_x86.h  primitive.h  sysdep.h  utils.h
contrib/onload-7.1.2.141/src/include/ci/efch/: mmap_id.h  op_types.h
contrib/onload-7.1.2.141/src/include/ci/efhw/: checks.h  common.h  common_ci2linux.h  common_sysdep.h  debug.h  debug_ci2linux.h  debug_linux.h  device.h  ef10.h  efhw_types.h  eventq.h  hardware_linux.h  hardware_sysdep.h  iopage.h  iopage_linux.h  iopage_types.h  iopage_ul.h  mc_driver_pcol.h  nic.h  sysdep.h  sysdep_ci2linux.h  sysdep_linux.h
contrib/onload-7.1.2.141/src/include/ci/efrm/: efrm_client.h  vi_resource_manager.h
contrib/onload-7.1.2.141/src/include/ci/internal/: banner.h  ip.h  ip_log.h  ip_shared_ops.h  ip_shared_types.h  ip_signal.h  ip_types.h  iptimer.h  opts_netif_def.h  stats_def.h  syscall.h  transport_common.h  transport_config_opt.h
contrib/onload-7.1.2.141/src/include/cplane/: ioctl.h  mib.h  server.h
contrib/onload-7.1.2.141/src/include/etherfabric/: vi.h
contrib/onload-7.1.2.141/src/include/onload/: common.h  cplane_ops.h  declare_syscalls.h.tmpl  eplock.h  eplock_resource.h  ioctl.h  linux_mmap.h  linux_onload.h  nic.h  osfile.h  signals.h  syscall_unix.h  tcp_driver.h  tcp_helper.h  tcp_helper_fns.h  version.h
contrib/onload-7.1.2.141/src/include/zf/: zf_udp.h
contrib/onload-7.1.2.141/src/lib/ciapp/: dump_select_set.c  dump_tcp_info.c  net.c  testapp.c
contrib/onload-7.1.2.141/src/lib/citools/: eth_addr.c  hex_dump.c  icmp_checksum.c  ip_addr.c  log.c  log_unique.c  mmake.mk  pktdump.c
contrib/onload-7.1.2.141/src/lib/ciul/: checksum.c  ef10_event.c  logging.c  mmake.mk  pt_endpoint.c
contrib/onload-7.1.2.141/src/lib/cplane/: mmake.mk
contrib/onload-7.1.2.141/src/lib/efhw/: ef10.c  falcon.c
contrib/onload-7.1.2.141/src/lib/efrm/: driver_object.c  efrm_internal.h  vi_resource_alloc.c
contrib/onload-7.1.2.141/src/lib/efthrm/: eplock_resource_manager.c  iobufset.c  onload_nic.c  oof_filters.c  tcp_helper_endpoint_move.c  tcp_helper_ioctl.c  tcp_helper_linux.c  tcp_helper_resource.c  tcp_helper_sleep.c
contrib/onload-7.1.2.141/src/tests/ef_vi/: efjumborx.c  eflatency.c  efsink.c
contrib/onload-7.1.2.141/src/tools/ip/: libstack.c  libstack.h  mmake.mk  stackdump.c  tcpdump_bin.c
contrib/onload-7.1.2.141/src/tools/onload_remote_monitor/: ftl_decls.h  ftl_defs.h  orm_json_lib.c
deploy/: network-definition-attachment.yaml  nic_template.conf  vsfc-cdp.yaml
deploy/serviceaccount/: account.yaml  role-bind.yaml
driver/patches/: char_driver.c.patch  driver_object.c.patch  vi.h.patch
include/: BUILD.bazel  local_efvi_socket.cpp  local_efvi_socket.hpp
lib/: BUILD.bazel  citools.c  citools.h  efvi_allocator.cpp  efvi_allocator.hpp  efvi_global.hpp  efvi_rx.hpp  efvi_tx.hpp
plugin/: BUILD.bazel  go.mod  go.sum  main.go  sfc-virtual-device-plugin.go  test.sh
plugin/client/: BUILD.bazel  client.go
plugin/config/: BUILD.bazel  config.go  types.go
plugin/deviceplugin/: BUILD.bazel  plugin.go  plugin_manager.go  plugin_registry.go  server.go  types.go  vsfc_plugin.go  vsfc_server.go
plugin/deviceplugin/manager/: BUILD.bazel  plugin_manager.go
plugin/deviceplugin/registry/: BUILD.bazel  plugin_registry.go
plugin/efvi/: BUILD.bazel  efvi.pb.cc  efvi.pb.go  efvi_grpc.pb.go
plugin/resource/: BUILD.bazel  storage.go
plugin/resource/types/: BUILD.bazel  types.go
plugin/util/: BUILD.bazel  util.go
proto/: BUILD.bazel  efvi.proto  efvi_service.pb.go  efvi_service.proto  efvi_service_grpc.pb.go
samples/: BUILD.bazel  citools.c  citools.h  efvi_allocator.cpp  efvi_client.cpp  efvi_global.hpp  efvi_rx.hpp  efvi_tx.hpp  interface_info.cpp  samples.c
samples/list_resource/: BUILD.bazel  list_resource.go
samples/netclient/: BUILD.bazel  netclient.go
util/: BUILD.bazel  net_util.hpp  tcpip.hpp  util.cpp  util.hpp
(+79 files in other folders)
