load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

genrule(
    name = "myprojectenv",
    outs = ["envs.txt"],
    cmd = "printenv > $@",
)

# gazelle:prefix sfc-virtual-device-plugin
gazelle_binary(
    name = "gazelle-protobuf",
    languages = [
        "@bazel_gazelle//language/go",
        "@bazel_gazelle//language/proto",
        "@build_stack_rules_proto//language/protobuf",
    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

gazelle(
    name = "gazelle",
    args = [
        "-proto_configs=gazelle_config.yaml",
    ],
    gazelle = ":gazelle-protobuf",
)
