load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix plugin
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=plugin/go.mod",
        "-to_macro=go_deps.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

go_binary(
    name = "plugin",
    embed = [":plugin_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "plugin_lib",
    srcs = ["sfc-virtual-device-plugin.go"],
    importpath = "plugin",
    visibility = ["//visibility:private"],
    deps = ["//plugin/vendor/k8s.io/kubernetes/pkg/kubelet/apis/deviceplugin/v1alpha"],
)
