load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "efvi_svc_proto",
    srcs = ["efvi_service.proto"],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "efvi_svc_cc_proto",
    visibility = ["//visiblity:public"],
    deps = [":efvi_svc_proto"],
)

go_proto_library(
    name = "efvi_svc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "example.com/repo/efvi/service",
    proto = ":efvi_svc_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "foo",
    embed = [":efvi_svc_go_proto"],
    importpath = "example.com/repo/efvi/service",
    visibility = ["//visibility:public"],
)

cc_grpc_library(
    name = "efvi_svc_cc_grpc_lib",
    srcs = [":efvi_svc_proto"],
    grpc_only = True,
    visibility = ["//visibility:public"],
    deps = [":efvi_svc_cc_proto"],
)