load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
load("@build_stack_rules_proto//rules/cc:grpc_cc_library.bzl", "grpc_cc_library")
load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

# gazelle:prefix proto
proto_library(
    name = "efvi_proto",
    srcs = ["efvi.proto"],
    visibility = ["//visibility:public"],
)

grpc_cc_library(
    name = "efvi_grpc_cc_library",
    srcs = ["efvi.grpc.pb.cc"],
    hdrs = ["efvi.grpc.pb.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":efvi_cc_library",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_grpc_grpc//:grpc++_reflection",
    ],
)

proto_cc_library(
    name = "efvi_cc_library",
    srcs = ["efvi.pb.cc"],
    hdrs = ["efvi.pb.h"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:protobuf"],
)

proto_compile(
    name = "efvi_cpp_compile",
    outputs = [
        "efvi.grpc.pb.cc",
        "efvi.grpc.pb.h",
        "efvi.pb.cc",
        "efvi.pb.h",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/builtin:cpp",
        "@build_stack_rules_proto//plugin/grpc/grpc:protoc-gen-grpc-cpp",
    ],
    proto = "efvi_proto",
)

proto_compile(
    name = "efvi_go_compile",
    output_mappings = [
        "efvi.pb.go=sfc-virtual-device-plugin/efvi/efvi.pb.go",
        "efvi_grpc.pb.go=sfc-virtual-device-plugin/efvi/efvi_grpc.pb.go",
    ],
    outputs = [
        "efvi.pb.go",
        "efvi_grpc.pb.go",
    ],
    plugins = [
        "@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go",
        "@build_stack_rules_proto//plugin/grpc/grpc-go:protoc-gen-go-grpc",
    ],
    proto = "efvi_proto",
)

proto_go_library(
    # broken: now use vendor grpc_lib
    name = "efvi_go_proto",
    srcs = [
        "efvi.pb.go",
        "efvi_grpc.pb.go",
    ],
    importpath = "sfc-virtual-device-plugin/efvi",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_library(
    name = "efvi",
    embed = [":efvi_go_proto"],
    importpath = "sfc-virtual-device-plugin/efvi",
    visibility = ["//visibility:public"],
)
