load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "efvi_allocator",
    srcs = [
        "efvi_allocator.cpp",
    ],
    linkopts = [
        "-lpthread",
    ],
    deps = [
       "//lib:efvi_allocator",
    ],
)

cc_binary(
    name = "efvi_client",
    srcs = [
        "efvi_client.cpp",
    ],
    deps = [
        "//include:local_efvi_socket",
    ],
)

cc_binary(
    name = "samples",
    srcs = [
        "samples.c",
    ],
    copts = [
        "-Iexternal/onload/src/include",
    ],
    deps = [
        "@onload//:ci_tool",
        "@onload//:ciul",
    ],
)

cc_binary(
    name = "interface_info",
    srcs = [
        "interface_info.cpp",
    ],
)
