load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "sfc-virtual-device-plugin/plugin/client",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/config",
        "@com_github_k8snetworkplumbingwg_network_attachment_definition_client//pkg/apis/k8s.cni.cncf.io/v1:k8s_cni_cncf_io",
        "@com_github_k8snetworkplumbingwg_network_attachment_definition_client//pkg/client/clientset/versioned/typed/k8s.cni.cncf.io/v1:k8s_cni_cncf_io",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
    ],
)
