load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "types.go",
    ],
    importpath = "sfc-virtual-device-plugin/plugin/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
)
