load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deviceplugin",
    srcs = [
        "plugin.go",
        "server.go",
    ],
    importpath = "plugin/deviceplugin",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/efvi",
        "//plugin/util",
        "//plugin/vendor/github.com/golang/glog",
        "//plugin/vendor/github.com/oklog/run",
        "//plugin/vendor/google.golang.org/grpc",
        "//plugin/vendor/k8s.io/kubelet/pkg/apis/deviceplugin/v1beta1",
    ],
)
