load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "deviceplugin",
    srcs = [
        "plugin.go",
        "server.go",
        "types.go",
        "vsfc_plugin.go",
        "vsfc_server.go",
    ],
    importpath = "sfc-virtual-device-plugin/plugin/deviceplugin",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/client",
        "//plugin/config",
        "//plugin/resource",
        "//plugin/resource/types",
        "//plugin/util",
        "//plugin/vendor/k8s.io/kubelet/pkg/apis/deviceplugin/v1beta1",
        "//proto:efvi",
        "@com_github_golang_glog//:glog",
        "@com_github_oklog_run//:run",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
