load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "manager",
    srcs = ["plugin_manager.go"],
    importpath = "sfc-virtual-device-plugin/plugin/deviceplugin/manager",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin/client",
        "//plugin/config",
        "//plugin/deviceplugin",
        "//plugin/deviceplugin/registry",
        "//plugin/resource/types",
        "@com_github_golang_glog//:glog",
    ],
)
